--- a/core/web_gui/src/App.css
+++ b/core/web_gui/src/App.css
@@ -24,3 +24,14 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+
+.overview-container {
+  background-color: #fff;
+  padding: 1em;
+}
+
+.overview-container img {
+  width: 30%;
+  margin-left: 30%;
+}
