--- a/core/web_gui/src/App.css
+++ b/core/web_gui/src/App.css
@@ -35,3 +35,16 @@
   width: 30%;
   margin-left: 30%;
 }
+
+.dataset-card {
+  margin-bottom: 1em;
+}
+
+.dataset-card p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.dataset-box button {
+  margin-right: 2em !important;
+}
