--- a/cyberhead/web/src/index.css
+++ b/cyberhead/web/src/index.css
@@ -123,7 +123,7 @@
 }
 
 .heat-vision {
-  width: 100%;
+  width: 25%;
   background-color: white;
   height: 100vh;
   border-radius: 5px;
@@ -131,7 +131,7 @@
 }
 
 .heatmap-upload-form {
-  width: 25%;
+  width: 100%;
 }
 
 .heat-upload-file::-webkit-file-upload-button {
@@ -157,7 +157,7 @@
 .heatmap-list {
   border: 0.5px solid rgba(1,1,1,0.1);
   padding: 1em;
-  width: 25%;
+  width: 100%;
   border-radius: 5px;
   text-align: center;
 }
@@ -185,4 +185,75 @@
   margin: 0;
   padding: 0;
   color: rgba(1,1,1,0.6);
+}
+
+.heatvision-box {
+  display: flex;
+  background-color: white;
+}
+
+.heatmap-box-information {
+  padding: 1em;
+}
+
+
+
+.loader,
+.loader:before,
+.loader:after {
+  background: #ffffff;
+  -webkit-animation: load1 1s infinite ease-in-out;
+  animation: load1 1s infinite ease-in-out;
+  width: 1em;
+  height: 4em;
+}
+.loader {
+  color: #ffffff;
+  text-indent: -9999em;
+  margin: 88px auto;
+  position: relative;
+  font-size: 11px;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+  position: absolute;
+  top: 0;
+  content: '';
+}
+.loader:before {
+  left: -1.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.loader:after {
+  left: 1.5em;
+}
+@-webkit-keyframes load1 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 4em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em;
+  }
+}
+@keyframes load1 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 4em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em;
+  }
 }
